# pharmacy_calculator

./: Home.py  README.md  pyproject.toml
pages/: 1_🧑🏼‍🔬_Calculadora Para Sistema de Terapia Específica.py  2_⚗️_Calculadora Para Sistema de Terapia Específica GH.py  3_💉_Superfície Corpórea Para Sistema de Terapia Específica.py  4_💊_Dose de Ataque Para Sistema de Terapia Específica.py  5_⏰_Calculadora de Datas.py
