[tool.poetry]
name = "project-4bio"
version = "0.1.0"
description = "Webapp famacology calculator"
authors = ["Vinicius Borges"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
